test to solve form scale  on iphone

--- a/css/modal.css
+++ b/css/modal.css
@@ -534,8 +534,8 @@ footer {
 		-webkit-min-logical-width: calc(100% - 16px);
 		padding: 8px;
 	}
-	.text-control { font-size: 100%; }/*evite le zoom on focus*/
-	
+	/* .text-control { font-size: 100%; }evite le zoom on focus */
+
 	.header-logo img {
 		padding: 20px 0 0 20px;
 	}
